# fomo

./: .gitignore  Makefile  README.md  docker-compose.deploy.yml  docker-compose.yml  render.yaml
.github/workflows/: docker-build-deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: base.py  chat_agent.py  hotspot_agent.py  sentiment_agent.py  summary_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 20260516_a3b7c9d1e2f4_report_hot_pool_json.py  20260516_b4605bca37fa_initial_schema.py  20260516_e91f584d8c59_add_ticker_mentions.py  20260516_f2a18c3d9012_report_source_digest.py  20260518_c5d2e8f91a3b_add_article_chunks_pgvector.py
backend/api/: articles.py  chat.py  meta.py  pipeline.py  prompts.py  reports.py  sources.py  tickers.py
backend/crawlers/: rss_crawler.py  twitter_crawler.py  wechat_crawler.py
backend/db/: database.py  models.py
backend/pipeline/: daily_pipeline.py
backend/scheduler/: tasks.py
backend/scripts/: akshare_smoke.py  docker-entrypoint.sh  purge_daily_vectors.py
backend/services/: article_retention.py  hot_pool.py  notifier.py  nyse_calendar.py  rsshub_wake.py  source_labels.py  stock_price.py  ticker_aliases.py
backend/services/market/: __init__.py  constants.py  report_text.py  us_quotes.py
backend/tools/: db_tool.py  rag_tool.py
backend/vector_store/: ark_multimodal_embeddings.py  chroma_store.py  pg_store.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json
frontend/app/: apple-icon.tsx  (+3 more)
(+24 files in other folders)
