[project]
name = "fomo-backend"
version = "0.1.0"
description = "FOMO FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "sse-starlette==2.1.3",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "pgvector>=0.3.6",
    "langchain==0.3.13",
    "langchain-openai==0.2.14",
    "langchain-community==0.3.13",
    "openai==1.58.1",
    "sentence-transformers==3.3.1",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "httpx[socks]==0.28.1",
    "apscheduler==3.10.4",
    "pytz==2024.2",
    "tenacity==9.0.0",
    "numpy==2.2.0",
    "python-dateutil==2.9.0.post0",
    "feedparser>=6.0.12",
    "langchain-huggingface>=0.2.0",
    "modelscope>=1.37.0",
    "akshare>=1.18.60",
    "exchange-calendars>=4.13.2",
    "psycopg2-binary>=2.9.12",
    "volcengine-python-sdk[ark]>=5.0.27",
]

[tool.uv]
package = false
